--- a/.github/workflows/check_release.yaml
+++ b/.github/workflows/check_release.yaml
@@ -27,3 +27,12 @@ jobs:
       env:
         DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
       run: python github_release.py
+    - name: Commit version file
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git add last_version.json
+        git commit -m 'Update last checked version'
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
