--- a/.github/workflows/check_release.yaml
+++ b/.github/workflows/check_release.yaml
@@ -6,6 +6,9 @@ on:
   workflow_dispatch:
 
 
+permissions:
+  contents: write # Grant write permissions to the contents scope
+
 jobs:
   check_release:
     runs-on: ubuntu-latest
