--- a/.github/workflows/check_release.yaml
+++ b/.github/workflows/check_release.yaml
@@ -35,7 +35,7 @@ jobs:
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add last_version.json
-        git commit -m 'Update last checked version'
+        git diff-index --quiet HEAD || git commit -m 'Update last checked version'
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
