feat: add comprehensive test suite and improve webhook handling
Test Additions:
- Add test_config.py for configuration management testing
- Add test_discord.py for webhook and notification testing
- Add test_github.py for GitHub release monitoring
- Add test_version.py for version tracking functionality

Test Coverage:
- Configuration loading and validation
- Webhook URL resolution and priority
- Discord notification formatting and sending
- GitHub release fetching and version pattern matching
- Version file management and persistence
- Error handling across all components

Improvements:
- Move webhook URL validation from module level to runtime execution
- Add clear error message when webhook URL is not configured
- Add comprehensive comments to pytest.ini for better maintainability

The test suite ensures robust functionality across all components
while following testing best practices with proper mocking and
environment isolation.

--- a/.github/workflows/check_release.yaml
+++ b/.github/workflows/check_release.yaml
@@ -7,19 +7,21 @@ on:
 
 
 permissions:
-  contents: write # Grant write permissions to the contents scope
+  contents: write # For updating version file
+  actions: read # For running the workflow
 
 jobs:
   check_release:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
-        python-version: 3.x
+        python-version: '3.12'
+        cache: 'pip' # Enable pip caching for faster installations
 
     - name: Install dependencies
       run: |
@@ -30,6 +32,7 @@ jobs:
       env:
         DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
       run: python github_release.py
+
     - name: Commit version file
       run: |
         git config --global user.name 'github-actions[bot]'
