fix: update code coverage error in github action
Fixing error Error: Failed to CreateArtifact: Received non-retryable error: Failed request: (409) Conflict: an artifact with this name already exists on the workflow run

Adding python version name to coverage-report

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,3 +1,6 @@
+# Tests workflow
+# Runs tests across multiple Python versions and uploads coverage reports
+
 name: Tests
 
 on:
@@ -35,6 +38,6 @@ jobs:
     - name: Upload coverage report
       uses: actions/upload-artifact@v4
       with:
-        name: coverage-report
+        name: coverage-report-py${{ matrix.python-version }}
         path: htmlcov/
         if-no-files-found: error
