fix: improve SonarCloud test coverage configuration
- Update test coverage collection in workflow

- Add pytest-cov for better coverage reporting

- Configure proper test and coverage paths in sonar-project.properties

- Fix coverage file path handling

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,10 +8,17 @@ sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file
 sonar.sources=.
 sonar.python.version=3
+
+# Coverage configuration
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.coverage.exclusions=tests/**/*,setup.py
+
+# Test configuration
+sonar.test.inclusions=tests/**/*
+sonar.python.xunit.reportPath=test-results.xml
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
 # Exclude test files and virtual environments
-sonar.exclusions=test/**/*,venv/**/*,**/*.pyc,**/__pycache__/** 
+sonar.exclusions=tests/**/*,venv/**/*,**/*.pyc,**/__pycache__/**,.pytest_cache/**/*,.coverage,coverage.xml 
