--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -25,12 +25,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install coverage pytest
+        pip install coverage pytest pytest-cov
 
     - name: Run tests with coverage
       run: |
-        coverage run -m pytest
-        coverage xml -i
+        pytest --cov=. --cov-report=xml:coverage.xml tests/
+
+    - name: Fix coverage file path
+      run: |
+        sed -i 's/\/home\/runner\/work\/CRS-Bot\/CRS-Bot\//\/github\/workspace\//g' coverage.xml
 
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@master
