fix: resolve SonarCloud automatic analysis conflict
- Switch to SonarCloud Scanner CLI

- Update sonar-project.properties configuration

- Add explicit test directory configuration

- Improve exclusion patterns

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,20 +5,23 @@ sonar.organization=lucasdelossantos
 sonar.projectName=CRS-Bot
 sonar.projectVersion=1.0
 
-# Path is relative to the sonar-project.properties file
+# Source and test files
 sonar.sources=.
+sonar.tests=tests
+
+# Python version
 sonar.python.version=3
 
 # Coverage configuration
 sonar.python.coverage.reportPaths=coverage.xml
-sonar.coverage.exclusions=tests/**/*,setup.py
+sonar.coverage.exclusions=tests/**/*,setup.py,**/__init__.py
 
 # Test configuration
 sonar.test.inclusions=tests/**/*
 sonar.python.xunit.reportPath=test-results.xml
 
-# Encoding of the source code. Default is default system encoding
+# Encoding of the source code
 sonar.sourceEncoding=UTF-8
 
-# Exclude test files and virtual environments
-sonar.exclusions=tests/**/*,venv/**/*,**/*.pyc,**/__pycache__/**,.pytest_cache/**/*,.coverage,coverage.xml 
+# Exclude patterns
+sonar.exclusions=tests/**/*,venv/**/*,**/*.pyc,**/__pycache__/**,.pytest_cache/**/*,.coverage,coverage.xml,.git/**/*,.github/**/* 
