fix: explicitly configure SonarCloud analysis mode
- Add explicit scanner configuration parameters

- Disable automatic analysis mode

- Configure quality gate wait

- Add SCM provider configuration

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -47,4 +47,8 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: |
         sonar-scanner \
-          -Dsonar.host.url=https://sonarcloud.io
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.organization=lucasdelossantos \
+          -Dsonar.projectKey=lucasdelossantos_CRS-Bot \
+          -Dsonar.scm.provider=git \
+          -Dsonar.qualitygate.wait=true
