--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,10 @@ sonar.organization=lucasdelossantos
 sonar.projectName=CRS-Bot
 sonar.projectVersion=1.0
 
+# Analysis mode
+sonar.analysis.mode=publish
+sonar.alm.enabled=false
+
 # Source and test files
 sonar.sources=.
 sonar.tests=tests
