feat: configure Dependabot auto-merge
- Enable auto-merge for patch and minor updates

- Add auto-merge workflow

- Exclude major version updates from auto-merge

- Add automatic PR approval for Dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,13 @@ updates:
   labels:
   - "dependencies"
   - "python"
+  # Auto-merge configuration
+  auto-merge: true
+  versioning-strategy: auto
+  # Only auto-merge patch and minor updates
+  ignore:
+  - dependency-name: "*"
+    update-types: [ "version-update:semver-major" ]
 
 # Enable version updates for GitHub Actions
 - package-ecosystem: "github-actions"
@@ -21,3 +28,10 @@ updates:
   labels:
   - "dependencies"
   - "github-actions"
+  # Auto-merge configuration
+  auto-merge: true
+  versioning-strategy: auto
+  # Only auto-merge patch and minor updates
+  ignore:
+  - dependency-name: "*"
+    update-types: [ "version-update:semver-major" ]
