--- a/.github/workflows/manual-dependabot.yml
+++ b/.github/workflows/manual-dependabot.yml
@@ -7,17 +7,15 @@ jobs:
   dependabot:
     name: 'Dependabot'
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
-    - name: Enable GitHub App token
-      id: generate_token
-      uses: tibdex/github-app-token@v2
-      with:
-        app_id: ${{ secrets.APP_ID }}
-        private_key: ${{ secrets.APP_PRIVATE_KEY }}
-
     - name: Trigger Dependabot
-      uses: actions/checkout@v4
-    - run: |
-        gh auth login --with-token <<< "${{ steps.generate_token.outputs.token }}"
-        gh api -X POST repos/${{ github.repository }}/dependabot/scans \
-          --silent 
+      run: |
+        gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
+        gh api \
+          --method POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          /repos/${{ github.repository }}/dependabot/scans 
