--- a/.github/workflows/manual-dependabot.yml
+++ b/.github/workflows/manual-dependabot.yml
@@ -10,6 +10,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      security-events: write
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -23,4 +24,4 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer $GITHUB_TOKEN" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/${{ github.repository }}/dependabot/scans 
+          "https://api.github.com/repos/${{ github.repository }}/security/dependabot/updates" 
