--- a/.github/workflows/manual-dependabot.yml
+++ b/.github/workflows/manual-dependabot.yml
@@ -10,18 +10,20 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-      security-events: write
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Trigger Dependabot
+    - name: Setup Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '3.0'
+
+    - name: Install Dependabot CLI
+      run: gem install dependabot-cli
+
+    - name: Run Dependabot
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        curl -L \
-          -X POST \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer $GITHUB_TOKEN" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          "https://api.github.com/repos/${{ github.repository }}/security/dependabot/updates" 
+        dependabot update pip 
