--- a/.github/workflows/manual-dependabot.yml
+++ b/.github/workflows/manual-dependabot.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Trigger Dependabot
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         gh api \
           --method POST \
@@ -35,9 +35,8 @@ jobs:
 
     - name: Check and merge Dependabot PRs
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
         gh pr list --json number,author,headRefName --jq '.[] | select(.author.login == "dependabot[bot]") | .number' | while read pr; do
           if [ ! -z "$pr" ]; then
             echo "Enabling auto-merge for PR #$pr"
