--- a/.github/workflows/dependency-update.yml
+++ b/.github/workflows/dependency-update.yml
@@ -10,6 +10,12 @@ jobs:
     - uses: actions/checkout@v4
       with:
         token: ${{ secrets.PAT_TOKEN }}
+        fetch-depth: 0
+
+    - name: Configure Git
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
     - name: Update requirements.txt
       run: |
@@ -25,6 +31,8 @@ jobs:
         title: "build(deps): update requests to latest version"
         body: "Update requests package to latest version"
         branch: "deps/update-requests"
+        base: "main"
+        delete-branch: true
         labels: |
           dependencies
           python 
