--- a/.github/workflows/manual-dependabot.yml
+++ b/.github/workflows/manual-dependabot.yml
@@ -38,16 +38,34 @@ jobs:
       uses: actions/checkout@v4
       with:
         token: ${{ secrets.PAT_TOKEN }}
+        fetch-depth: 0
 
     - name: Check and merge PRs
       env:
         GH_TOKEN: ${{ secrets.PAT_TOKEN }}
       run: |
         # List all open PRs with dependency labels or from dependabot
-        gh pr list --json number,author,labels,title,statusCheckRollup --jq '.[] | select((.author.login == "dependabot[bot]") or (.labels | map(.name) | contains(["dependencies"])))' | while read -r pr_json; do
+        gh pr list --json number,author,labels,title,headRefName,baseRefName,statusCheckRollup --jq '.[] | select((.author.login == "dependabot[bot]") or (.labels | map(.name) | contains(["dependencies"])))' | while read -r pr_json; do
           pr_number=$(echo "$pr_json" | jq -r '.number')
+          head_branch=$(echo "$pr_json" | jq -r '.headRefName')
+          base_branch=$(echo "$pr_json" | jq -r '.baseRefName')
+          
           if [ ! -z "$pr_number" ]; then
-            echo "Processing PR #$pr_number"
+            echo "Processing PR #$pr_number ($head_branch)"
+            
+            # Update PR branch with latest base branch changes
+            echo "Updating PR with latest changes from $base_branch..."
+            git fetch origin "$base_branch:$base_branch"
+            git fetch origin "$head_branch:$head_branch" || true
+            git checkout "$head_branch"
+            git merge "$base_branch" || {
+              echo "Merge conflict detected, skipping PR #$pr_number"
+              continue
+            }
+            git push origin "$head_branch"
+            
+            # Wait a moment for checks to start
+            sleep 10
             
             # Check if there are any failed checks
             failed_checks=$(echo "$pr_json" | jq -r '.statusCheckRollup[] | select(.conclusion == "failure" or .status == "in_progress") | .context' 2>/dev/null)
@@ -59,7 +77,7 @@ jobs:
               done
               
               echo "Waiting for checks to complete..."
-              sleep 60  # Give checks some time to run
+              sleep 120  # Give checks more time to run
             fi
             
             echo "Enabling auto-merge for PR #$pr_number"
