--- a/.github/workflows/manual-dependabot.yml
+++ b/.github/workflows/manual-dependabot.yml
@@ -84,6 +84,7 @@ jobs:
             echo "mypy>=1.7.0"
             echo "pyyaml>=6.0.1"
             echo "responses>=0.25.0"
+            echo "pytest-mock>=3.12.0"
           } > requirements.txt.new
           
           # Check if there are actual changes
@@ -103,13 +104,14 @@ jobs:
               --body "Update Python package dependencies to their latest versions" \
               --label "dependencies" \
               --label "python" \
-              --base main
+              --base main \
+              --delete-branch-on-merge
 
             # Enable auto-merge
             pr_number=$(gh pr list --json number,headRefName --jq '.[] | select(.headRefName == "deps/update-python") | .number')
             if [ ! -z "$pr_number" ]; then
               echo "Enabling auto-merge for PR #$pr_number"
-              gh pr merge "$pr_number" --auto --merge || true
+              gh pr merge "$pr_number" --auto --merge --delete-branch || true
             fi
           else
             echo "No changes needed in requirements.txt"
@@ -184,7 +186,8 @@ jobs:
             - Update actions/setup-python to $setup_python_version" \
             --label "dependencies" \
             --label "github_actions" \
-            --base main; then
+            --base main \
+            --delete-branch-on-merge; then
             echo "Error creating PR. Checking if it already exists..."
             existing_pr=$(gh pr list --json number,headRefName --jq '.[] | select(.headRefName == "deps/update-actions") | .number')
             if [ ! -z "$existing_pr" ]; then
@@ -199,7 +202,7 @@ jobs:
           pr_number=$(gh pr list --json number,headRefName --jq '.[] | select(.headRefName == "deps/update-actions") | .number')
           if [ ! -z "$pr_number" ]; then
             echo "Enabling auto-merge for PR #$pr_number"
-            if ! gh pr merge "$pr_number" --auto --merge; then
+            if ! gh pr merge "$pr_number" --auto --merge --delete-branch; then
               echo "Failed to enable auto-merge for PR #$pr_number"
             fi
           else
