--- a/.github/workflows/dependency-update.yml
+++ b/.github/workflows/dependency-update.yml
@@ -2,6 +2,7 @@ name: Update Dependencies
 on:
   schedule:
   - cron: '0 0 * * 1' # Run every Monday at midnight
+  workflow_dispatch: {} # Allow manual triggering
   repository_dispatch:
     types: [ dependency-update ]
 
