--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,13 @@ services:
   crs-bot:
     build: .
     volumes:
-      - .:/app  # Mount current directory for development
+      - .:/app:ro  # Mount current directory read-only for development
       - data:/app/data  # Persistent volume for last_version.json
     environment:
       - DISCORD_WEBHOOK_URL=${DISCORD_WEBHOOK_URL}  # From .env file or environment
       - PYTHONUNBUFFERED=1
     restart: unless-stopped
+    user: crsbot
     healthcheck:
       test: ["CMD", "python", "-c", "import requests; requests.get('https://api.github.com/zen')"]
       interval: 30s
