--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -52,4 +52,4 @@ jobs:
       uses: codecov/codecov-action@v4
       with:
         file: ./coverage.xml
-        fail_ci_if_error: true
+        fail_ci_if_error: false # Don't fail if coverage upload fails
