--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -27,6 +27,9 @@ jobs:
         pip install -r requirements.txt
         pip install coverage pytest pytest-cov
 
+    - name: Create data directory
+      run: mkdir -p data
+
     - name: Run tests with coverage
       run: |
         pytest --cov=. --cov-report=xml:coverage.xml tests/
